<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddParamActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:context=".AddParamActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/good_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/good_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_good_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/good_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/production_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/good_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_production_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expiration_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/expiration_date"
            app:layout_constraintBottom_toTopOf="@+id/buttonConfirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/good_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_expiration_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/apply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expiration_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    android:orientation="vertical"-->
    <!--    android:padding="16dp">-->

    <!--    <TextView-->
    <!--        android:id="@+id/good_name"-->
    <!--        android:labelFor="@id/edit_good_name"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="48dp"-->
    <!--        android:text="@string/good_name"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/edit_good_name"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="48dp"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:inputType="text"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/good_name"-->
    <!--        android:autofillHints="" />-->

    <!--    <TextView-->
    <!--        android:id="@+id/good_date"-->
    <!--        android:labelFor="@id/edit_production_date"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:text="@string/production_date"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/edit_good_name" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/edit_production_date"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="48dp"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:inputType="date"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/good_date"-->
    <!--        android:autofillHints=""/>-->

    <!--    <TextView-->
    <!--        android:id="@+id/expiration_date"-->
    <!--        android:labelFor="@id/edit_expiration_date"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:text="@string/expiration_date"-->
    <!--        android:textSize="18sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/edit_production_date" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/edit_expiration_date"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="48dp"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:inputType="date"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/expiration_date"-->
    <!--        android:autofillHints=""/>-->

    <!--    <Button-->
    <!--        android:id="@+id/buttonConfirm"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginBottom="32dp"-->
    <!--        android:text="@string/apply"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        tools:layout_editor_absoluteX="16dp" />-->

    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->